# prarob_sem16

./: .gitignore  POKRETANJE_PROJEKTA.md  README.md
3D_model/: Izvršni član.step  Link 90.step  Link RR.step  README.md  Robot_2.0.step  kolicina.txt  postolje.step
CV/calibrationdata/: ost.txt  ost.yaml
GUI/: README.md  robot_gui.py
media/: README.md
ros2_ws/: README.md
ros2_ws/launch/: master.launch.py
ros2_ws/src/prarob_autonomous/: package.xml  setup.cfg  setup.py
ros2_ws/src/prarob_autonomous/config/: autonomous_params.yaml
ros2_ws/src/prarob_autonomous/launch/: autonomous.launch.py  challenge.launch.py
ros2_ws/src/prarob_autonomous/prarob_autonomous/: autonomous_draw_node.py  board_calibration_node.py  board_mapping.py  command_parser.py  detection_utils.py  planning_pipeline.py
ros2_ws/src/prarob_autonomous/test/: test_core_logic.py
ros2_ws/src/prarob_calib/config/: camera_params.yaml
ros2_ws/src/prarob_calib/launch/: camera_world.launch.py
ros2_ws/src/prarob_calib/prarob_calib/: camera_to_world.py
ros2_ws/src/prarob_interact/: .env.example  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/prarob_interact/prarob_interact/: __init__.py  agent.py  config.py  kinematics.py  path_planning.py  ros2_introspection.py  text_interface.py  tools.py
ros2_ws/src/prarob_yolo/: Dockerfile  pyproject.toml
ros2_ws/src/prarob_yolo/yolo_processing/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_controll/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robot_controll/controllers/: controllers.yaml
ros2_ws/src/robot_controll/launch/: robot_2.rviz  robot_2_ik_real_sim.launch.py  robot_2_ik_sim.launch.py  robot_2_sim.launch.py
ros2_ws/src/robot_controll/meshes/: izvrsni_clan.stl  link_90.stl  link_rr.stl  postolje.stl
ros2_ws/src/robot_controll/scripts/: ik_solver.py  manual_controller.py  reset_hardware.py
ros2_ws/src/robot_controll/urdf/: prarob_manipulator.ros2_control.xacro  prarob_manipulator.urdf.xacro  prarob_manipulator.xacro  robot_2.urdf.xacro
ros2_ws/src/robot_controllv2/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/robot_controllv2/config/: config.yaml
ros2_ws/src/robot_controllv2/launch/: prarob_manipulator.launch.py  robot.launch.py  sim.launch.py
ros2_ws/src/robot_controllv2/scripts/: move_robot.py
(+8 files in other folders)
