<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prarob_autonomous</name>
  <version>0.1.0</version>
  <description>
    Autonomous drawing orchestrator for the PRAROB seminar robot: parses a
    natural-language command, resolves YOLO detections to board coordinates,
    plans an obstacle-avoiding marker path and executes it through inverse
    kinematics. Also provides board (camera-to-world) homography calibration
    and the single-click time-challenge launch.
  </description>

  <maintainer email="nikola.digiusto@gmail.com">sem16</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>yolo_msgs</exec_depend>
  <exec_depend>prarob_interact</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
